--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
     ],
     "require": {
         "illuminate/support": "^9.13",
-        "nocarefree/php-liquid": "dev-master"
+        "nocarefree/php-liquid": "dev-master",
+        "illuminate/config": "^9.14"
     }
 }
