--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
     "require": {
         "illuminate/support": "^9.13",
         "nocarefree/php-liquid": "dev-master",
-        "illuminate/config": "^9.14"
+        "illuminate/config": "^9.14",
+        "twig/twig": "^3.4"
     }
 }
