--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,6 @@
         "php": ">= 7.0",
         "illuminate/support": "^9.13",
         "nocarefree/php-liquid": "dev-master",
-        "illuminate/config": "^9.14",
-        "twig/twig": "^3.4"
+        "illuminate/config": "^9.14"
     }
 }
