--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,12 @@
 {
-    "name": "nocarefree/php-shopify-liquid",
+    "name": "nocarefree/php-shopify-template",
     "description": "Shopify Liquid template engine for php",
     "keywords": ["php","liquid", "template","shopify"],
     "license": "MIT",
 	"type": "library",
     "autoload": {
         "psr-4": {
-            "Ncf\\ShopifyLiquid\\": "src/"
+            "Ncf\\ShopifyTemplate\\": "src/"
         }
     },
     "authors": [
